<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spritelab.iamgioco.PartitaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#69b3fe"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/saluto_nome_utente"
                android:id="@+id/salutoUtente"
                android:padding="10dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/crediti_utente"
                android:id="@+id/creditiUtente"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_background">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nuova_partita"
                    android:id="@+id/buttonNuovaPartita"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/negozio"
                    android:id="@+id/buttonNegozio"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:id="@+id/buttonRecord"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>