<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antoniovirgone.iam.PunteggioFinale">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#69b3fe">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/punteggio_finale"
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:padding="10dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_background"
            android:layout_alignParentLeft="false"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_alignWithParentIfMissing="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/punti_totali"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/crediti_vinti"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:id="@+id/buttonHome"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
